[project]
name = "unitconvertor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[theme]
base="dark"
primaryColor="#6A52CC"
backgroundColor="#1A1A1A"
secondaryBackgroundColor="#2D2D2D"
textColor="#FFFFFF"
font="sans serif"